68716: Implement feedback